Source/CUDA.Import.pas

//
// The graphics platform GLScene https://github.com/glscene
//
unit CUDA.Import;

(*
 * Copyright 1993-2020 NVIDIA Corporation.  All rights reserved.
 *
 * NOTICE TO USER:
 *
 * This source code is subject to NVIDIA ownership rights under U.S. and
 * international Copyright laws.  Users and possessors of this source code
 * are hereby granted a nonexclusive, royalty-free license to use this code
 * in individual and commercial software.
 *
 * NVIDIA MAKES NO REPRESENTATION ABOUT THE SUITABILITY OF THIS SOURCE
 * CODE FOR ANY PURPOSE.  IT IS PROVIDED "AS IS" WITHOUT EXPRESS OR
 * IMPLIED WARRANTY OF ANY KIND.  NVIDIA DISCLAIMS ALL WARRANTIES WITH
 * REGARD TO THIS SOURCE CODE, INCLUDING ALL IMPLIED WARRANTIES OF
 * MERCHANTABILITY, NONINFRINGEMENT, AND FITNESS FOR A PARTICULAR PURPOSE.
 * IN NO EVENT SHALL NVIDIA BE LIABLE FOR ANY SPECIAL, INDIRECT, INCIDENTAL,
 * OR CONSEQUENTIAL DAMAGES, OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
 * OF USE, DATA OR PROFITS,  WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE
 * OR OTHER TORTIOUS ACTION,  ARISING OUT OF OR IN CONNECTION WITH THE USE
 * OR PERFORMANCE OF THIS SOURCE CODE.
 *
 * U.S. Government End Users.   This source code is a "commercial item" as
 * that term is defined at  48 C.F.R. 2.101 (OCT 1995), consisting  of
 * "commercial computer  software"  and "commercial computer software
 * documentation" as such terms are  used in 48 C.F.R. 12.212 (SEPT 1995)
 * and is provided to the U.S. Government only as a commercial end item.
 * Consistent with 48 C.F.R.12.212 and 48 C.F.R. 227.7202-1 through
 * 227.7202-4 (JUNE 1995), all U.S. Government End Users acquire the
 * source code with only those rights set forth herein.
 *
 * Any use of this source code in individual and commercial software must
 * include, in the user documentation and internal comments to the code,
 * the above Disclaimer and U.S. Government End Users Notice.
 *)

interface

uses
  Winapi.Windows;

const
  CUDAAPIDLL = 'nvcuda.dll';

type
  // CUDA device pointer
  TCUdeviceptr = Pointer;

  // CUDA device
  TCUdevice = Integer;

  // CUDA context
  PCUcontext = ^TCUcontext;
  TCUcontext = record
  end;

  // CUDA module
  PCUmodule = ^TCUmodule;
  TCUmodule = record
  end;

  // CUDA function
  PCUfunction = ^TCUfunction;
  TCUfunction = record
  end;

  // CUDA array
  PCUarray = ^TCUarray;
  TCUarray = record
  end;

  // CUDA texture reference
  PCUtexref = ^TCUtexref;
  TCUtexref = record
  end;

  // CUDA event
  PCUevent = ^TCUevent;
  TCUevent = record
  end;

  // CUDA stream
  PCUstream = ^TCUstream;
  TCUstream = record
  end;

  // CUDA graphics interop resource
  PPCUgraphicsResource = ^PCUgraphicsResource;
  PCUgraphicsResource = ^TCUgraphicsResource;
  TCUgraphicsResource = record
  end;

  // Context creation flags
  TCUctx_flags = (
    // Automatic scheduling
    CU_CTX_SCHED_AUTO = 0,
    // Set spin as default scheduling
    CU_CTX_SCHED_SPIN = 1,
    // Set yield as default scheduling
    CU_CTX_SCHED_YIELD = 2,
    CU_CTX_SCHED_MASK = 3, 
	// Use blocking synchronization
	CU_CTX_BLOCKING_SYNC = 4,
    // Support mapped pinned allocations
    CU_CTX_MAP_HOST = 8,
    CU_CTX_FLAGS_MASK = 15);

  // Event creation flags
  TCUevent_flags = (
    // Default event flag
    CU_EVENT_DEFAULT = 0,
    // Event uses blocking synchronization
    CU_EVENT_BLOCKING_SYNC = 1
    );

  // Array formats
  TCUarray_format = (
    // Unsigned 8-bit integers
    CU_AD_FORMAT_UNSIGNED_INT8 = $01,
    // Unsigned 16-bit integers
    CU_AD_FORMAT_UNSIGNED_INT16 = $02,
    // Unsigned 32-bit integers
    CU_AD_FORMAT_UNSIGNED_INT32 = $03,
    // Signed 8-bit integers
    CU_AD_FORMAT_SIGNED_INT8 = $08,
    // Signed 16-bit integers   
    CU_AD_FORMAT_SIGNED_INT16 = $09,
    // Signed 32-bit integers
    CU_AD_FORMAT_SIGNED_INT32 = $0A,
    // 16-bit floating point
    CU_AD_FORMAT_HALF = $10,
    // 32-bit floating point
    CU_AD_FORMAT_FLOAT = $20
    );

  // Texture reference addressing modes
  TCUaddress_mode = (
    // Wrapping address mode
    CU_TR_ADDRESS_MODE_WRAP = 0,
    // Clamp to edge address mode
    CU_TR_ADDRESS_MODE_CLAMP = 1,
    // Mirror address mode
    CU_TR_ADDRESS_MODE_MIRROR = 2
    );

  // Texture reference filtering modes
  TCUfilter_mode = (
    // Point filter mode
	CU_TR_FILTER_MODE_POINT = 0,
    // Linear filter mode
    CU_TR_FILTER_MODE_LINEAR = 1
    );

  // Device properties
  TCUdevice_attribute = (
    // Maximum number of threads per block
    CU_DEVICE_ATTRIBUTE_MAX_THREADS_PER_BLOCK = 1,
    // Maximum block dimension X
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_X = 2,
    // Maximum block dimension Y
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Y = 3,
    // Maximum block dimension Z
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Z = 4,
    // Maximum grid dimension X
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_X = 5,
    // Maximum grid dimension Y
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Y = 6,
    // Maximum grid dimension Z
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Z = 7,
    // Maximum shared memory available per block in bytes
    CU_DEVICE_ATTRIBUTE_MAX_SHARED_MEMORY_PER_BLOCK = 8,
    // Deprecated, use CU_DEVICE_ATTRIBUTE_MAX_SHARED_MEMORY_PER_BLOCK
    CU_DEVICE_ATTRIBUTE_SHARED_MEMORY_PER_BLOCK = 8,
    // Memory available on device for __constant__ variables in a CUDA C kernel in bytes
    CU_DEVICE_ATTRIBUTE_TOTAL_CONSTANT_MEMORY = 9,
    // Warp size in threads
    CU_DEVICE_ATTRIBUTE_WARP_SIZE = 10,
    // Maximum pitch in bytes allowed by memory copies
    CU_DEVICE_ATTRIBUTE_MAX_PITCH = 11,
    // Maximum number of 32-bit registers available per block
    CU_DEVICE_ATTRIBUTE_MAX_REGISTERS_PER_BLOCK = 12,
    // Deprecated, use CU_DEVICE_ATTRIBUTE_MAX_REGISTERS_PER_BLOCK
    CU_DEVICE_ATTRIBUTE_REGISTERS_PER_BLOCK = 12,
    // Peak clock frequency in kilohertz
    CU_DEVICE_ATTRIBUTE_CLOCK_RATE = 13,
    // Alignment requirement for textures
    CU_DEVICE_ATTRIBUTE_TEXTURE_ALIGNMENT = 14,
    // Device can possibly copy memory and execute a kernel concurrently
    CU_DEVICE_ATTRIBUTE_GPU_OVERLAP = 15,
    // Number of multiprocessors on device    
    CU_DEVICE_ATTRIBUTE_MULTIPROCESSOR_COUNT = 16,
    // Specifies whether there is a run time limit on kernels
    CU_DEVICE_ATTRIBUTE_KERNEL_EXEC_TIMEOUT = 17,
    // Device is integrated with host memory
    CU_DEVICE_ATTRIBUTE_INTEGRATED = 18,
    // Device can map host memory into CUDA address space
    CU_DEVICE_ATTRIBUTE_CAN_MAP_HOST_MEMORY = 19,
    // Compute mode (See ::CUcomputemode for details)
    CU_DEVICE_ATTRIBUTE_COMPUTE_MODE = 20
    );

  (* *
    * CUDA Limits
  *)
  TcudaLimit = (
    // GPU thread stack size
	cudaLimitStackSize = $00,
    // GPU printf FIFO size
    cudaLimitPrintfFifoSize = $01
    );

  // Legacy device properties
  TCUdevprop = record
    // Maximum number of threads per block
    maxThreadsPerBlock: Integer;
    // Maximum size of each dimension of a block
	maxThreadsDim: array [0 .. 2] of Integer;
    // Maximum size of each dimension of a grid
    maxGridSize: array [0 .. 2] of Integer;
    // Shared memory available per block in bytes
    sharedMemPerBlock: Integer;
    // Constant memory available on device in bytes
    totalConstantMemory: Integer;
    // Warp size in threads
    SIMDWidth: Integer;
    // Maximum pitch in bytes allowed by memory copies
    memPitch: Integer;
    // 32-bit registers available per block
    regsPerBlock: Integer;
    // Clock frequency in kilohertz
    clockRate: Integer;
    // Alignment requirement for textures
    textureAlign: Integer;
  end;

  // Function properties
  TCUfunction_attribute = (

    (* The number of threads beyond which a launch of the function would fail.
     * This number depends on both the function and the device on which the
     * function is currently loaded. *)
    CU_FUNC_ATTRIBUTE_MAX_THREADS_PER_BLOCK = 0,

    (* The size in bytes of statically-allocated shared memory required by
     * this function. This does not include dynamically-allocated shared
     * memory requested by the user at runtime. *)
    CU_FUNC_ATTRIBUTE_SHARED_SIZE_BYTES = 1,

    { * The size in bytes of user-allocated constant memory required by this
      * function. }
    CU_FUNC_ATTRIBUTE_CONST_SIZE_BYTES = 2,

    { * The size in bytes of thread local memory used by this function. }
    CU_FUNC_ATTRIBUTE_LOCAL_SIZE_BYTES = 3,

    { * The number of registers used by each thread of this function. }
    CU_FUNC_ATTRIBUTE_NUM_REGS = 4,

    CU_FUNC_ATTRIBUTE_MAX);

  // Memory types
  TCUmemorytype = (
    // Host memory
	CU_MEMORYTYPE_HOST = $01,
    // Device memory
    CU_MEMORYTYPE_DEVICE = $02,
    // Array memory
    CU_MEMORYTYPE_ARRAY = $03
    );

  // Compute Modes
  TCUcomputemode = (
    // Default compute mode (Multiple contexts allowed per device)
	CU_COMPUTEMODE_DEFAULT = 0,
    // Compute-exclusive mode (Only one context can be present on this device at a time)
    CU_COMPUTEMODE_EXCLUSIVE = 1,
    // Compute-prohibited mode (No contexts can be created on this device at this time)
    CU_COMPUTEMODE_PROHIBITED = 2
    );

  // Online compiler options
  TCUjit_option = (
    { * Max number of registers that a thread may use. }

    CU_JIT_MAX_REGISTERS = 0,

    { * IN: Specifies minimum number of threads per block to target compilation
      * for\n
      * OUT: Returns the number of threads the compiler actually targeted.
      * This restricts the resource utilization fo the compiler (e.g. max
      * registers) such that a block with the given number of threads should be
      * able to launch based on register limitations. Note, this option does not
      * currently take into account any other resource limitations, such as
      * shared memory utilization. }
    CU_JIT_THREADS_PER_BLOCK,

    { * Returns a float value in the option of the wall clock time, in
      * milliseconds, spent creating the cubin }
    CU_JIT_WALL_TIME,

    { * Pointer to a buffer in which to print any log messsages from PTXAS
      * that are informational in nature }
    CU_JIT_INFO_LOG_BUFFER,

    { * IN: Log buffer size in bytes.  Log messages will be capped at this size
      * (including null terminator)\n
      * OUT: Amount of log buffer filled with messages }
    CU_JIT_INFO_LOG_BUFFER_SIZE_BYTES,

    { * Pointer to a buffer in which to print any log messages from PTXAS that
      * reflect errors }
    CU_JIT_ERROR_LOG_BUFFER,

    { * IN: Log buffer size in bytes.  Log messages will be capped at this size
      * (including null terminator)\n
      * OUT: Amount of log buffer filled with messages }
    CU_JIT_ERROR_LOG_BUFFER_SIZE_BYTES,

    { * Level of optimizations to apply to generated code (0 - 4), with 4
      * being the default and highest level of optimizations. }
    CU_JIT_OPTIMIZATION_LEVEL,

    { * No option value required. Determines the target based on the current
      * attached context (default) }
    CU_JIT_TARGET_FROM_CUCONTEXT,

    { * Target is chosen based on supplied CUjit_target_enum. }
    CU_JIT_TARGET,

    { * Specifies choice of fallback strategy if matching cubin is not found.
      * Choice is based on supplied CUjit_fallback_enum. }
    CU_JIT_FALLBACK_STRATEGY );

  // Online compilation targets
  TCUjit_target = (
    // Compute device class 1.0
    CU_TARGET_COMPUTE_10 = 0,
	// Compute device class 1.1
    CU_TARGET_COMPUTE_11,
    // Compute device class 1.2
    CU_TARGET_COMPUTE_12,
    // Compute device class 1.3
    CU_TARGET_COMPUTE_13
    );

  // Cubin matching fallback strategies
  TCUjit_fallback = (
    // ** Prefer to compile ptx */
    CU_PREFER_PTX = 0,
    // ** Prefer to fall back to compatible binary code */
    CU_PREFER_BINARY);

  // Flags to register a graphics resource
  TCUgraphicsRegisterFlags = (CU_GRAPHICS_REGISTER_FLAGS_NONE = $00000000);
